# libxmpp

./: Cargo.toml  README.md
src/: error.rs  lib.rs  tcp_stream.rs  xml_framer.rs  xmpp.rs
src/stanza/: bind.rs  chat.rs  disco.rs  mod.rs  muc.rs  ping.rs  sasl.rs  stream.rs
